servicea-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicea-app
  namespace: servicea
  labels:
    app: servicea-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicea-app
  template:
    metadata:
      labels:
        app: servicea-app
    spec:
      containers:
      - name: servicea-app
        image: learningcloudnativego/servicea-app:0.1
        imagePullPolicy: IfNotPresent
        command: ['/servicea/app']
        ports:
        - name: httpport
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 2
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 1
        resources:
          requests:
            memory: '64Mi'
            cpu: '250m'
          limits:
            memory: '128Mi'
            cpu: '500m'
