servicea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicea-app
  namespace: servicea
  labels:
    app: servicea-app
spec:
  ports:
  - port: 8001
    targetPort: httpport
    name: http
  selector:
    app: servicea-app
