serviceb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serviceb-app
  namespace: serviceb
  labels:
    app: serviceb-app
spec:
  ports:
  - port: 8002
    targetPort: httpport
    name: http
  selector:
    app: serviceb-app
