servicea-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicea-app
  namespace: istio-system
  labels:
    app: servicea-app
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/service-gateway
  http:
  - match:
    - uri:
        exact: /servicea/greet
    rewrite:
      uri: /greet
    route:
    - destination:
        host: servicea-app.servicea.svc.cluster.local
        port:
          number: 8001
